# osia-framework

./: .env.example  .gitignore  ANYTHINGLLM_CONFIG.md  DIRECTIVES.md  HANDOVER.md  README.md  docker-compose.yml  install.sh  main.py  osia.sh  pyproject.toml  view.xml  yt_intel.en-en.srt  yt_intel.en-orig.srt  yt_intel.en-orig.vtt  yt_intel.en.vtt
.claude/: settings.json
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  socket-security.yml  sync-hf-jobs.yml
.kiro/skills/: osia-status.md  osia.md
.kiro/specs/osia-core-rebuild/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/steering/: git-workflow.md  product.md  structure.md  tech.md
assets/logos/: manifest.json
assets/wiki/: osia_wiki.css
config/: aesthetic.yaml  feeds.txt  feeds.txt.example  osia.yaml  weekly_briefing.yaml  x_accounts.yaml  youtube_cookies.txt
config/desks/: cultural-and-theological-intelligence-desk.yaml  cyber-intelligence-and-warfare-desk.yaml  environment-and-ecology-desk.yaml  finance-and-economics-directorate.yaml  geopolitical-and-security-desk.yaml  human-intelligence-and-profiling-desk.yaml  information-warfare-desk.yaml  science-technology-and-commercial-desk.yaml  the-watch-floor.yaml
docs/: hf-model-recommendations.md  humint-filing-system.md  instagram_account_pool.md  literature-collections-proposal.md  wiki_implementation_plan.md
hf-spaces/research-worker/: app.py  requirements.txt  research_batch.py
personas/default/: bio.txt  prompt.md
scripts/: backup_qdrant.py  boost_source_quality.py  endpoints_block.py  generate_aesthetic_pack.py  generate_intro_video.py  generate_logo.py  generate_portraits.py  hf_jobs.py  ig_backfill_sources.py  ig_create_account.sh  ig_pool_admin.py  ingest_acled.py  ingest_acled_files.py  ingest_church_committee.py  ingest_cia_crest.py  ingest_courtlistener.py  ingest_cti_bench.py  ingest_cti_reports.py  ingest_cve_database.py  ingest_cybersecurity_attacks.py  ingest_epa_toxic_releases.py  ingest_epstein_files.py  ingest_etymology.py  ingest_fbi_vault.py  ingest_fec.py  ingest_frus.py  ingest_gdelt.py  ingest_hackerone_reports.py  ingest_icij_offshore_leaks.py  ingest_iran_israel_war.py  ingest_marxists.py  ingest_mitre_attack.py  ingest_noaa_storm_events.py  ingest_ofac_sanctions.py  ingest_pentagon_papers.py  ingest_reliefweb_disasters.py  ingest_ttp_mappings.py  ingest_uspto.py  ingest_wikileaks_cables.py  ingest_yahoo_finance.py  (+18 more)
src/: mcp_bridge.py  mcp_host.py  orchestrator.py
src/agents/: instagram_account_manager.py  instagram_creator.py  instagram_warmup_agent.py  persona_daemon.py  proton_account_manager.py  proton_creator.py  proton_reader.py  social_media_agent.py
src/cron/: daily_sitrep.py  instagram_pool_health.py  iran_israel_monitor.py  weekly_briefing.py
src/desks/: anythingllm_client.py  desk_registry.py  hf_endpoint_manager.py
src/gateways/: adb_device.py  cyber_bridge.py  ingress_api.py  kali_dispatcher.py  mcp_dispatcher.py  phone_bridge.py  queue_api.py  rss_ingress.py  signal_ingress.py  status_api.py  x_ingress.py
src/intelligence/: aesthetic.py  briefing_generator.py  chatterbox_tts_client.py  entity_extractor.py  infographic_renderer.py  intro_video_generator.py  qdrant_store.py  report_generator.py  slide_renderer.py  source_tracker.py  thumbnail_generator.py  tts_client.py  venice_image_client.py  wiki_client.py  youtube_uploader.py
src/workers/: hermes_worker.py  research_worker.py
systemd/: osia-adb-server.service  osia-anythingllm.service  osia-cyber-bridge.service  osia-daily-sitrep.service  osia-daily-sitrep.timer  osia-hermes-worker.service  osia-hermes-worker.timer  osia-ig-health.service  osia-ig-health.timer  osia-ingest-acled.service  osia-ingest-acled.timer  osia-ingest-courtlistener.service  osia-ingest-courtlistener.timer  osia-ingest-epa.service  osia-ingest-epa.timer  osia-ingest-fec.service  osia-ingest-fec.timer  osia-ingest-gdelt.service  osia-ingest-gdelt.timer  osia-ingest-noaa.service  osia-ingest-noaa.timer  osia-ingest-reliefweb.service  osia-ingest-reliefweb.timer  osia-ingest-uspto.service  osia-ingest-uspto.timer  osia-ingress-api.service  osia-iran-israel-monitor.service  osia-iran-israel-monitor.timer  osia-mcp-arxiv-bridge.service  osia-mcp-phone-bridge.service  osia-mcp-semantic-scholar-bridge.service  osia-mcp-tavily-bridge.service  osia-mcp-time-bridge.service  osia-mcp-wikipedia-bridge.service  osia-orchestrator.service  osia-persona-daemon.service  osia-qdrant-backup.service  osia-qdrant-backup.timer  osia-qdrant.service  osia-queue-api.service  (+12 more)
templates/prompts/: collection-directorate.txt  cultural-and-theological-intelligence-desk.txt  cyber-intelligence-and-warfare-desk.txt  environment-and-ecology-desk.txt  finance-and-economics-directorate.txt  geopolitical-and-security-desk.txt  human-intelligence-and-profiling-desk.txt  information-warfare-desk.txt  science-technology-and-commercial-desk.txt  the-watch-floor.txt
templates/report/: briefing_slide.html.j2  infographic_card.html.j2  intsum_report.html.j2  thumbnail.html.j2
