[project]
name = "osia-framework"
version = "0.1.0"
description = "Event-driven multi-agent intelligence orchestration framework for automated OSINT collection, analysis, and reporting."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic==0.86.0",
    "beautifulsoup4==4.14.3",
    "fastapi==0.135.1",
    "feedparser==6.0.12",
    "google-genai==1.68.0",
    "huggingface-hub==1.7.2",
    "httpx==0.28.1",
    "matplotlib==3.10.8",
    "mcp[cli]==1.26.0",
    "openpyxl==3.1.5",
    "pandas==3.0.1",
    "python-dotenv==1.2.2",
    "pyyaml==6.0.3",
    "qdrant-client==1.17.1",
    "redis==7.3.0",
    "slowapi==0.1.9",
    "starlette-context==0.5.1",
    "uvicorn==0.42.0",
    "websockets==16.0",
    "yt-dlp==2026.3.17",
    "youtube-transcript-api==1.2.4",
    "datasets==4.8.4",
    "weasyprint==68.1",
    "jinja2==3.1.6",
    "markdown==3.10.2",
]

[project.optional-dependencies]
dev = [
    "hypothesis==6.151.9",
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "pyright==1.1.408",
    "ruff==0.15.7",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes (unused imports, undefined names)
    "I",   # isort
    "S",   # flake8-bandit (security)
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long — not enforced, formatter handles wrapping where possible
    "S101",  # assert statements (used in tests)
    "S603",  # subprocess calls (used intentionally for ADB/systemd)
    "S607",  # partial executable path (ADB/systemd)
    "S104",  # 0.0.0.0 binding — intentional for internal services
    "S311",  # random used for human-like timing simulation, not crypto
    "S110",  # try/except/pass — intentional in cleanup and metrics probes
    "S314",  # XML parsing from trusted local ADB device output
    "S608",  # false positive — f-string prompts flagged as SQL injection
    "S310",  # urllib URL from env var, not user input
    "B008",  # FastAPI Depends() in defaults is the correct FastAPI pattern
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S"]  # relax security rules in test files

[tool.pyright]
pythonVersion = "3.11"
include = ["src"]
typeCheckingMode = "basic"
